# Cursproj2

./: .flake8  README.md  main.py  pyproject.toml
src/: api.py  models.py  storage.py
tests/: conftest.py  test_json_saver.py  test_vacancy.py
