[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "course_project"          # произвольное имя пакета на PyPI
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "mypy>=1.10",
    "isort>=5.13",
    "black>=24.4",
    "flake8>=7.0",
]

# ───────────────────────────────────────────────
#  src‑layout: весь код лежит в каталоге src/
# ───────────────────────────────────────────────
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

# ───────────────────────────────────────────────
#  Форматтеры / линтеры
# ───────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
py_version = 310
known_first_party = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]